# BBCollisions

./: CMakeLists.txt  main.cpp
headers/: box.h
lib/headers/: billrigidbody.h
src/: box.cpp
